fixed dropdown menus on mobile navigation menus

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Dynamic News Lite
 Theme URI: https://themezee.com/themes/dynamicnews/
 Description: A responsive, multipurpose blogging and magazine theme with bold colors and fonts. It comes with a featured content slider and a magazine page template. Dynamic News is a trending theme on wordpress.com and we are sure you will like the WordPress.org version as well.
-Version: 1.4.1
+Version: 1.4.2
 Author: ThemeZee
 Author URI: https://themezee.com
 Tags: two-columns, light, red, custom-background, custom-colors, custom-header, custom-menu, editor-style, blog, news, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, blue, silver, white, green, gray
@@ -1665,18 +1665,22 @@ embed, iframe, object, video {
 		border: none;
 		box-shadow: none;
 		background: none;
-		top: 0;
-		left: 0;
+		top: auto;
+		left: auto;
 	}
+	.main-navigation-menu li,
 	.main-navigation-menu ul,
-	.mega-menu-item .mega-menu-content,
-	.mega-menu-item .mega-menu-content .mega-menu-widget {
+	.main-navigation-menu li ul ul,
+	.main-navigation-menu .mega-menu-item .mega-menu-content,
+	.main-navigation-menu .mega-menu-item .mega-menu-content .mega-menu-widget {
 		position: static;
 		display: block;
 		left: auto;
 		top: auto;
+		clear: left;
 	}
 
+	/* Main Navigation Toggle */
 	#mainnav {
 		margin: 1.5em 0;
 		float: none;
@@ -1964,13 +1968,19 @@ embed, iframe, object, video {
 		border: none;
 		box-shadow: none;
 		background: none;
-		top: 0;
-		left: 0;
+		top: auto;
+		left: auto;
 	}
-	.top-navigation-menu li:hover ul ul, .top-navigation-menu li:hover ul ul ul, .top-navigation-menu li:hover ul ul ul ul,
-	.top-navigation-menu li:hover ul, .top-navigation-menu li li:hover ul, .top-navigation-menu li li li:hover ul, .top-navigation-menu li li li li:hover ul
-	{
-		display: inline;
+	.top-navigation-menu li,
+	.top-navigation-menu ul,
+	.top-navigation-menu li ul ul,
+	.top-navigation-menu .mega-menu-item .mega-menu-content,
+	.top-navigation-menu .mega-menu-item .mega-menu-content .mega-menu-widget {
+		position: static;
+		display: block;
+		left: auto;
+		top: auto;
+		clear: left;
 	}
 
 	#topnav-toggle {
